fix margin for footer icons on mobile screen

--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -23,7 +23,9 @@ footer {
 
     li {
       display: inline;
-      margin-left: em(10);
+      @include media($large-screen) {
+        margin-left: em(10);
+      }
     }
   }
 
